--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-telegram
-requests==2.21.0
+certifi==2019.11.28
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.8
+future==0.18.2
+idna==2.8
+pycparser==2.19
+pymongo==3.10.1
 python-telegram-bot==11.1.0
+requests==2.21.0
+six==1.14.0
+telegram==0.0.1
+urllib3==1.24.3
