--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 certifi==2019.11.28
-cffi==1.14.0
 chardet==3.0.4
-cryptography==3.2
+charset-normalizer==3.2.0
 future==0.18.2
 idna==2.8
+oauthlib==3.2.2
 pycparser==2.19
 pymongo==3.10.1
-python-telegram-bot==11.1.0
-requests==2.21.0
+pyTelegramBotAPI==4.12.0
+requests==2.31.0
+requests-oauthlib==1.3.1
 six==1.14.0
-telegram==0.0.1
+tweepy==4.14.0
 urllib3==1.24.3
